plugins {
    id 'application'
    id("org.openjfx.javafxplugin") version "0.0.11"
}

application {
    mainClass = 'client.Main'
}

javafx {
    version = "21.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

java {
	sourceCompatibility = '21'
}


dependencies {
	implementation project(":commons")
	
	implementation group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '3.1.5'
	implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.1.5'
	implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.1.5'
	implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.0.1'
	implementation 'com.google.inject:guice:7.0.0'

	implementation 'org.springframework.boot:spring-boot-starter-websocket:3.2.3'

	implementation 'org.openjfx:javafx-controls:17.0.2'
	implementation 'org.openjfx:javafx-fxml:17.0.2'

	implementation 'org.jetbrains:annotations:24.1.0'
}